--- a/public/css/less/kerberos/settings/main.less
+++ b/public/css/less/kerberos/settings/main.less
@@ -128,6 +128,11 @@
         -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
         transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     }
+
+    input[type="password"]
+    {
+        height: initial;
+    }
     
     .text
     {
@@ -320,7 +325,7 @@
         
         span > span:after
         {
-            border-bottom: 10px solid #f4f4f4;
+            border-bottom: 10px solid #fff;
             margin-left: -4px;
         }
         
